feat(preprocessing): add stemming and lemmatization

--- a/Einfuehrung_NLP.ipynb
+++ b/Einfuehrung_NLP.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,12 +546,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Stemmer\n",
+    "Ein Stemmer ist ein Tool, welches versucht anhand von einfachen Regeln ein Wort auf seinen Wortstamm zu kürzen (z.B. um festzustellen ob ein Wort eine Konjugation eines anderen ist). Das funktioniert im Englischen auch relativ gut, allerdings haben wir im Deutschen Probleme wie starke Verben die das ganze so ziemlich nutzlos machen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mensch kind bad'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stemmer = nltk.stem.snowball.GermanStemmer()\n",
+    "# Dinge wie Umlaute in pluralformen sind regelbasiert noch machbar\n",
+    "stemmer.stem(\"Menschen\") + \" \" + stemmer.stem(\"Kinder\") + \" \" + stemmer.stem(\"Bäder\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ess ass gegess'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stemmer.stem(\"essen\") + \" \" + stemmer.stem(\"aß\") + \" \" + stemmer.stem(\"gegessen\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lemmatizer\n",
+    "Ein Lemmatizer arbeitet im Gegensatz (zumindest in der Trainingsphase) mit einem echten Wörterbuch und kann so den lexikalischen Wortstamm herausfinden. Das ermöglicht dann später auch funktionen wie das verändern der Konjugation eines Verbs beim Umstellen eines Satzes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Wie', 'werden', 'der', 'wettern', 'morgen', 'in', 'Hamburg', '?']"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[token.lemma_ for token in nlp(\"Wie wird das Wetter morgen in Hamburg?\")] # funktioniert bei spacy noch nicht so perfekt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Lilith', 'essen', 'gestern', 'Hummus', '.']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[token.lemma_ for token in nlp(\"Lilith aß gestern Hummus.\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['essen', '-', 'essen', '-', 'essen']"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[token.lemma_ for token in nlp(\"essen - aß - gegessen\")] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Bücher und andere Resourcen\n",
     "- [**spacy Doku** ](https://spacy.io/usage/spacy-101)\n",
     "- [nltk doku](https://www.nltk.org/)\n",
     "- [Next Generation Natural Language Processing with Python - Alexis Rutherford](https://www.safaribooksonline.com/library/view/natural-language-processing/9781787285101/)\n",
     "- [Natural Language Processing with Python Cookbook](https://www.safaribooksonline.com/library/view/natural-language-processing/9781787289321/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
