feat(preprocessing): stop words

--- a/Einfuehrung_NLP.ipynb
+++ b/Einfuehrung_NLP.ipynb
@@ -665,6 +665,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Stopwords\n",
+    "Zumeist die häufigsten Wörter einer Sprache oder spezifischen Domäne, die in einem Text beim Weiterverarbeiten ignoriert werden sollen. Werden z.B. bei suchsystemen benutzt um nicht jedem Text, die einen Artikel der im Suchquery stand enthält, zu finden.\n",
+    "\n",
+    "Kann bei feststehenden Begriffen und Eigenenamen z.B. \"die Welle\" problematisch werden. Da empfiehlt sich dann Elemente die von einem NER erkannt wurden nicht als Stopwords zu markieren."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Wie - False',\n",
+       " 'wird - True',\n",
+       " 'das - True',\n",
+       " 'Wetter - False',\n",
+       " 'morgen - True',\n",
+       " 'in - True',\n",
+       " 'Hamburg - False',\n",
+       " '? - False']"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[\"{} - {}\".format(token.text, token.is_stop) for token in nlp(\"Wie wird das Wetter morgen in Hamburg?\")] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Bücher und andere Resourcen\n",
     "- [**spacy Doku** ](https://spacy.io/usage/spacy-101)\n",
     "- [nltk doku](https://www.nltk.org/)\n",
