feat(geocooding): entity geocoding as example (with map rendering)

--- a/Einfuehrung_NLP.ipynb
+++ b/Einfuehrung_NLP.ipynb
@@ -125,9 +125,9 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.Tagger at 0x7fab0bd3b1d0>),\n",
-       " ('parser', <spacy.pipeline.DependencyParser at 0x7fab0bd583b8>),\n",
-       " ('ner', <spacy.pipeline.EntityRecognizer at 0x7fab0bd58410>)]"
+       "[('tagger', <spacy.pipeline.Tagger at 0x7f0c1c512438>),\n",
+       " ('parser', <spacy.pipeline.DependencyParser at 0x7f0c1c5243b8>),\n",
+       " ('ner', <spacy.pipeline.EntityRecognizer at 0x7f0c1c524410>)]"
       ]
      },
      "execution_count": 4,
@@ -749,7 +749,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -864,6 +864,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Geocoding**\n",
+    "Außerdem wollen wir dierekt in der Pipeline alle als Orte erkannten Entities mit Geodaten Taggen um sie z.B. auf einer Karte darstellen zu können."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tagger', 'parser', 'ner', 'calculate_document_vectors', 'geocode_locations']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "\n",
+    "def geocode_locations(document):\n",
+    "    for key, entity in enumerate(document.ents):\n",
+    "        if entity.label_ == \"LOC\":\n",
+    "            document.ents[key].set_extension('location', default=None)\n",
+    "            RESPONSE_STATUS_OK = 'OK'\n",
+    "            GEOCODE_API_URL = 'https://maps.googleapis.com/maps/api/geocode/json'\n",
+    "            params = {'sensor': 'false', 'language': \"DE\", 'address': entity.text}\n",
+    "            response = requests.get(GEOCODE_API_URL, params=params)\n",
+    "            geo_response = response.json()\n",
+    "            results = []\n",
+    "            # print(geo_response['status'] )\n",
+    "            if geo_response['status'] == RESPONSE_STATUS_OK:\n",
+    "                location = {'lat': float(geo_response['results'][0]['geometry']['location']['lat']),\n",
+    "                            'lon': float(geo_response['results'][0]['geometry']['location']['lng'])}\n",
+    "                document.ents[key]._.location = location\n",
+    "                time.sleep(2)#hack for google quota limits\n",
+    "            \n",
+    "    return document\n",
+    "\n",
+    "# add calculate_document_vectors as a pipeline step\n",
+    "nlp.add_pipe(geocode_locations, name='geocode_locations', last=True)\n",
+    "print(nlp.pipe_names) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extraktion der geo entity aus unserem Beispielsatz…"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lat': 53.5510846, 'lon': 9.9936819}\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(\"wie wird das Wetter morgen in Hamburg?\")\n",
+    "print(doc.ents[0]._.location)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mit jupyter können wir so außerdem super einfach die in texten vorkommende Orte auf einer Karte visualisieren."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3238ef00e2274d95aef032833d2a4abc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(basemap={'max_zoom': 19, 'url': 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 'attribution': 'Map …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipyleaflet import (\n",
+    "    Map,\n",
+    "    Marker, \n",
+    "    TileLayer, \n",
+    "    basemaps\n",
+    ")\n",
+    "\n",
+    "center = [51.381716, 10.304767]\n",
+    "zoom = 5\n",
+    "\n",
+    "m = Map(center=center, zoom=zoom)\n",
+    "\n",
+    "\n",
+    "doc = nlp(\"Mit der Völkerwanderung im 5. Jahrhundert verfielen die antiken Städte auf dem Gebiet des heutigen Deutschlands weitgehend. Nur zu Augsburg, Regensburg, Trier und Köln ist der durchgängige Bestand als Stadt gesichert. Die Anzahl der Städte in Mitteleuropa blieb bis ca. 1100 mit einigen Hundert noch sehr gering. Der weitaus größte Teil entstand in den folgenden 250 Jahren, als ab 1120 zahlreiche Gründungsstädte entstanden, meist durch einen Gründungsakt und Stadtentwurf. Etwa zum Beginn der Neuzeit, Anfang des 16. Jahrhunderts, bestanden als bedeutende Städte (neben weiteren heute v. a. niederländischen, französischen und belgischen) vorwiegend die Freien Reichsstädte und die Residenzstädte:\")\n",
+    "\n",
+    "for entity in doc.ents:\n",
+    "    if entity.label_ == \"LOC\":\n",
+    "        # print(entity.text)\n",
+    "        if hasattr(entity._, 'location') and entity._.location != None:\n",
+    "            #print([entity._.location[\"lat\"], entity._.location[\"lon\"]])\n",
+    "            m += Marker(location=[entity._.location[\"lat\"], entity._.location[\"lon\"]])\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Training einer SVM zur intent classification\n",
     "In vielen aktuellen QnA und chatbot Systemen versuchen wir anhand des vom User eingegebenen Satzes in Verbindung mit dem Gesprächskontext den intent hinter einer Aussage herauszufinden. \n",
     "\n",
@@ -877,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,6 +1048,41 @@
     "    ]\n",
     "\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Als erstes preprocessen wir all unsere Sätze und ersetzen spezifische NERs (z.B. locations) durch placeholder um die SVM z.B. nicht auf einzelne Städte zu trainieren."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK\n",
+      "OK\n",
+      "OVER_QUERY_LIMIT\n",
+      "OK\n",
+      "OVER_QUERY_LIMIT\n",
+      "OK\n",
+      "OVER_QUERY_LIMIT\n",
+      "OK\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "for label in training_data:\n",
+    "    for key, item in enumerate(training_data[label]):\n",
+    "        training_data[label][key] = nlp(item)\n",
+    "        "
    ]
   },
   {
